fix buttons size on mobile

--- a/css/master.css
+++ b/css/master.css
@@ -21,6 +21,9 @@
   text-align: right;
 }
 
+#continua button{
+  font-size: 25px;
+}
 
 .progress-bar-vertical {
   width: 16%;
@@ -46,9 +49,12 @@
 }
 
 
-@media (max-width: 600px) {
+@media (max-width: 650px) {
  .answer{
    padding: 0;
    font-size: 15px !important;
+ }
+ #prima-riga div, #seconda-riga div{
+   padding: 0 5px;
  }
 }
